--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 </head>
 
 <body>
+    <div id="container">
+        <h1>To-Do List</h1>
+        <input type="text">
+        <ul>
+            <li><span>X</span> Concentration</li>
+            <li><span>X</span> Integrity</li>
+            <li><span>X</span> Chastity</li>
+        </ul>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 
