--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="assets/js/lib/jquery-3.3.1.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500i,700i" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>jQuery To-Do List</title>
 </head>
@@ -13,11 +14,17 @@
 <body>
     <div id="container">
         <h1>To-Do List</h1>
-        <input type="text">
+        <input type="text" placeholder="Add New To-Do">
         <ul>
-            <li><span>X</span> Concentration</li>
-            <li><span>X</span> Integrity</li>
-            <li><span>X</span> Chastity</li>
+            <li>
+                <span>X</span> Concentration
+            </li>
+            <li>
+                <span>X</span> Integrity
+            </li>
+            <li>
+                <span>X</span> Chastity
+            </li>
         </ul>
     </div>
     <script src="assets/js/script.js"></script>
